--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
+    "openai": "^6.15.0",
     "pg": "^8.16.3"
   }
 }
