--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "@tanstack/react-router-devtools": "^1.144.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
